--- a/init.toml
+++ b/init.toml
@@ -1,5 +1,5 @@
 #=============================================================================
-# dark_powered.toml --- dark powered configuration example for SpaceVim
+# basic.toml --- basic configuration example for SpaceVim
 # Copyright (c) 2016-2017 Wang Shidong & Contributors
 # Author: Wang Shidong < wsdjeg at 163.com >
 # URL: https://spacevim.org
@@ -18,19 +18,62 @@
     enable_guicolors = true
     # Disable statusline separator, if you want to use other value, please
     # install nerd fonts
-    statusline_separator = "arrow"
-    statusline_inactive_separator = "arrow"
-    buffer_index_type = 4
-    enable_tabline_filetype_icon = true
+    statusline_separator = "nil"
+    statusline_inactive_separator = "bar"
+    buffer_index_type = 0
+    windows_index_type = 0
+    enable_tabline_filetype_icon = false
     enable_statusline_mode = false
-
+    statusline_unicode_symbols = false
+    # Enable vim compatible mode, avoid changing origin vim key bindings
+    vimcompatible = true
+    automatic_update = true
 # Enable autocomplete layer
 [[layers]]
 name = 'autocomplete'
 auto-completion-return-key-behavior = "complete"
-auto-completion-tab-key-behavior = "smart"
+auto-completion-tab-key-behavior = "cycle"
 
 [[layers]]
 name = 'shell'
 default_position = 'top'
 default_height = 30
+
+[[layers]]
+  name = "lang#c"
+
+[[layers]]
+  name = "lsp"
+  filetypes = [
+    "c",
+    "cpp"
+  ]
+  [layers.override_cmd]
+    c = ["clangd"]
+
+[[layers]]
+  name = "format"
+
+[[layers]]
+  name = "tags"
+
+[[layers]]
+  name = "chinese"
+
+[[layers]]
+  name = "lang#java"
+
+[[layers]]
+  name = "checkers"
+
+[[layers]]
+  name = "fzf"
+
+[[layers]]
+  name = "VersionControl"
+
+[[layers]]
+  name = "colorscheme" 
+
+[[layers]]
+  name = "git"
